# EDM4hep-utils

./: .gitignore  CMakeLists.txt  EDM4HEPUtilsVersion.h  README.md
.github/workflows/: key4hep.yml
cmake/: EDM4HEPUtilsConfig.cmake.in  EDM4HEPUtilsCreateConfig.cmake
doc/: Doxyfile.in  contributing.md
edm4hep/: CMakeLists.txt
edm4hep/utils/: kinematics.h
tests/: CMakeLists.txt  test_kinematics.cpp
